[package]
name = "quinn-file-transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
cloudflare = "0.14.0"
dotenv = "0.15.0"
futures = "0.3.31"
once_cell = "1.21.3"
quinn = "0.11.8"
rcgen = "0.14.2"
reqwest = "0.12.22"
rustls = "0.23.29"
serde = "1.0.219"
serde_json = "1.0.141"
solana-commitment-config = "2.2.1"
solana-rpc-client = "2.3.6"
solana-rpc-client-api = "2.3.6"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
	"env-filter",
	"fmt",
	"json",
	"time",
] }
