[package]
name = "quinn-file-transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-config = "1"
aws-sdk-s3 = "1"
cloudflare = "0.14.0"
dotenv = "0.15.0"
futures = "0.3.31"
once_cell = "1.21.3"
solana-commitment-config = "2.2.1"
solana-keypair = "2.2.3"
solana-rpc-client = "2.3.6"
solana-signer = "2.2.1"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
	"env-filter",
	"fmt",
	"json",
	"time",
] }
